--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,93 +3,87 @@
 #
 
 sidebar:
-    about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
-    education: True # set to False if you want education in main section instead of in sidebar
+  about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
+  education: True # set to False if you want education in main section instead of in sidebar
 
-    # Profile information
-    name: Hung Pham
-    tagline: Junior student in Data Science & AI
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+  # Profile information
+  name: Hung Pham
+  tagline: AI Engineer
+  avatar: profile.png #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
-    # Sidebar links
-    email: hung.pt194437@sis.hust.edu.vn
-    phone: (+84) 97 116 9255
-    citizenship:
-    website: hungpham13.github.io/online-cv/ #do not add http://
-    linkedin:
-    xing:
-    github: hungpham13
-    telegram: huwngpham # add your nickname without '@' sign
-    gitlab:
-    bitbucket:
-    twitter: # '@webjeda'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
-    codewars: 
-    goodreads: # Number-Username, e.g. 123456-alandoe
-    pdf: 
+  # Sidebar links
+  email: hung.pt194437@sis.hust.edu.vn
+  phone: (+84) 97 116 9255
+  citizenship:
+  website: hungpham13.github.io/online-cv/ #do not add http://
+  linkedin:
+  xing:
+  github: hungpham13
+  telegram: huwngpham # add your nickname without '@' sign
+  gitlab:
+  bitbucket:
+  twitter: # '@webjeda'
+  stack-overflow: # Number/Username, e.g. 123456/alandoe
+  codewars:
+  goodreads: # Number-Username, e.g. 123456-alandoe
+  pdf:
 
-    languages:
-      - idiom: English
-        level: Intermediate
+  languages:
+    - idiom: English
+      level: Intermediate
 
-      - idiom: Vietnamese
-        level: Native
+    - idiom: Vietnamese
+      level: Native
 
+  interests:
+    - item: Learning English
+      link:
 
-    interests:
-      - item: Learning English
-        link:
+    - item: Music
+      link:
 
-      - item: Music
-        link:
-
-      - item: Reading
-        link:
+    - item: Reading
+      link:
 
 career-profile:
-    title: Current Interest
-    summary: |
-      Make responsive AI-driven website application
-        - AI Music recommender system
+  title: Current Interest
+  summary: |
+    Make responsive AI-driven website application
+      - AI Music recommender system
 education:
-    - degree: UG in DataScience & AI
-      university: Hanoi University of Science and Technology
-      time: 2019 - now
-      details: |
-        Describe your study here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-        pretium quis, sem.
-          - Bullet point
-          - Bullet point
+  - degree: Bachelor in DataScience & AI
+    university: Hanoi University of Science and Technology
+    time: 2019 - 2022
+    details: |
+      I have graduated from Hanoi University of Science and Technology with a Bachelor's degree in Data Science and Artificial Intelligence.
+      I learned about machine learning, deep learning, data mining, data visualization, and software engineering. I also have experience in working with real-world data and solving real-world problems.
 
 experiences:
-    - role: Frontend Developer & Designer
-      link: http://125.212.238.157:3001/
-      time: 2021 - 2022
-      company: Osemnai
-      details: |
-        Develop OCR web application using Typescript, React, Jotai, React-query. 
-        The application allows user to sign up, login, create recognition process, upload images, extract and edit information from input image.
- 
-    - role: Backend Intern
-      time: 2022 - 2023
-      link: https://github.com/hungpham13/TestDotnetAPI
-      company: VTC
-      details: |
-        Develop Restful API for VStream - an application for entertainment company to make event. 
-        The systems allows login, sign up, user management, event management, attendance management for each event, attendance validation by generating QR Code. 
-        Using .Net C# with SQL Server
+  - role: Frontend Developer & Designer
+    link: http://125.212.238.157:3001/
+    time: 2021 - 2022
+    company: Osemnai
+    details: |
+      Develop OCR web application using Typescript, React, Jotai, React-query. 
+      The application allows user to sign up, login, create recognition process, upload images, extract and edit information from input image.
 
-    - role: Intern Researcher
-      time: 2021 - Present
-      company: Intelligent Software Engineering Lab - BKAI
-      details: |
-        Develop algorithms to solve the problem of data discretization in Big Data. 
-        The algorithm is applied to calculate the PSI of customer credit score distributions by days. 
-        If the PSI for 2 consecutive days is high, bank manager can detect the abnormal event that make a large shift for population distribution.
-        
+  - role: Backend Intern
+    time: 2022 - 2023
+    link: https://github.com/hungpham13/TestDotnetAPI
+    company: VTC
+    details: |
+      Develop Restful API for VStream - an application for entertainment company to make event. 
+      The systems allows login, sign up, user management, event management, attendance management for each event, attendance validation by generating QR Code. 
+      Using .Net C# with SQL Server
+
+  - role: Intern Researcher
+    time: 2021 - Present
+    company: Intelligent Software Engineering Lab - BKAI
+    details: |
+      Develop algorithms to solve the problem of data discretization in Big Data. 
+      The algorithm is applied to calculate the PSI of customer credit score distributions by days. 
+      If the PSI for 2 consecutive days is high, bank manager can detect the abnormal event that make a large shift for population distribution.
+
 #     - role: Senior Software Engineer
 #       time: 2014 - 2015
 #       company: Google, London
@@ -113,42 +107,41 @@ experiences:
 #           - Bullet point
 #           - Bullet point
 projects:
-    title: Projects
-    intro: > 
-        You can see the details of the projects by clicking on the project name
+  title: Projects
+  intro: >
+    You can see the details of the projects by clicking on the project name
 
-    assignments:
-      - title: Hust MilkTea Store Management Application
-        link: "https://github.com/DSAI-K64-20212-Project/Software-Engineering"
-        tagline: "Building a store management system, managing raw materials, revenue, and operating costs."
-      - title: Face mask detection using Faster R-CNN and YOLOv5
-        link: "https://github.com/hungpham13/Face-mask-detection"
-        tagline: "Apply two famous deep learning algorithms in object detection problems to detect correct, incorrect and non- mask wearers automatically, with focus on improving the accuracy and detection speed towards real-time detection."
+  assignments:
+    - title: Hust MilkTea Store Management Application
+      link: "https://github.com/DSAI-K64-20212-Project/Software-Engineering"
+      tagline: "Building a store management system, managing raw materials, revenue, and operating costs."
+    - title: Face mask detection using Faster R-CNN and YOLOv5
+      link: "https://github.com/hungpham13/Face-mask-detection"
+      tagline: "Apply two famous deep learning algorithms in object detection problems to detect correct, incorrect and non- mask wearers automatically, with focus on improving the accuracy and detection speed towards real-time detection."
 
-      - title: Shopee Products Matching Challenge
-        link: "https://github.com/calibretaliation/DeepLearning20211"
-        tagline: "Identify similar products based on their images. The data provided by Shopee with 30000 images of products categorized into 11000 different classes"
+    - title: Shopee Products Matching Challenge
+      link: "https://github.com/calibretaliation/DeepLearning20211"
+      tagline: "Identify similar products based on their images. The data provided by Shopee with 30000 images of products categorized into 11000 different classes"
 
-      - title: Vietnamese Laptop Exploratory Data Analysis
-        link: "https://github.com/hungpham13/Laptop-EDA"
-        tagline: "Analyzing the effect of laptop predictors on Vietnamese customers interest by scraping data from FPT Shop, Thegioididong and CellphoneS."
+    - title: Vietnamese Laptop Exploratory Data Analysis
+      link: "https://github.com/hungpham13/Laptop-EDA"
+      tagline: "Analyzing the effect of laptop predictors on Vietnamese customers interest by scraping data from FPT Shop, Thegioididong and CellphoneS."
 
-      - title: Stroke Prediction using CART, SVM and ANN
-        link: "https://github.com/LapTQ/IT31903_123220_Group18_Stroke-prediction"
-        tagline: "Using different machine learning algorithms to solve binary classification problem predicting whether a patient is likely to suffer from stroke or not based on gender, age, smoking status, marital status, etc.."
+    - title: Stroke Prediction using CART, SVM and ANN
+      link: "https://github.com/LapTQ/IT31903_123220_Group18_Stroke-prediction"
+      tagline: "Using different machine learning algorithms to solve binary classification problem predicting whether a patient is likely to suffer from stroke or not based on gender, age, smoking status, marital status, etc.."
 
-      - title: Time series analysis
-        link: ""
-        tagline: "Analyzing and modeling energy consumption data using deterministic and stochastic model."
+    - title: Time series analysis
+      link: ""
+      tagline: "Analyzing and modeling energy consumption data using deterministic and stochastic model."
 
-      - title: 8-Puzzle
-        link: "https://github.com/iamqh501/8-puzzle---AI-capstone-project"
-        tagline: "Implement different search algorithms like A* search, Iterative Deepening, Iterative Deepening A* to solve the 8-puzzle problem."
+    - title: 8-Puzzle
+      link: "https://github.com/iamqh501/8-puzzle---AI-capstone-project"
+      tagline: "Implement different search algorithms like A* search, Iterative Deepening, Iterative Deepening A* to solve the 8-puzzle problem."
 
-      - title: Timetable Arrangement
-        link: "https://github.com/hungpham13/Project-15-Timetable-Arrangement"
-        tagline: "Using Google OR-tools and self-implement optimizations to solve a problem of timetable arragement for classes."
-
+    - title: Timetable Arrangement
+      link: "https://github.com/hungpham13/Project-15-Timetable-Arrangement"
+      tagline: "Using Google OR-tools and self-implement optimizations to solve a problem of timetable arragement for classes."
 
 # publications:
 #     title: Publications
@@ -173,25 +166,25 @@ projects:
 #         conference: "Comm. ACM 4 (1961), 51–55"
 
 skills:
-    title: Skills &amp; Proficiency
+  title: Skills &amp; Proficiency
 
-    toolset:
-      - name: HTML, CSS, Javascript, ReactJS
-        level: 70%
-        
-      - name: Figma, Adobe Photoshop, Adobe Illustrator
-        level: 85%
-          
-      - name: Python & Pytorch
-        level: 85%
+  toolset:
+    - name: HTML, CSS, Javascript, ReactJS
+      level: 70%
 
-      - name: Pandas & Seaborn
-        level: 85%
+    - name: Figma, Adobe Photoshop, Adobe Illustrator
+      level: 85%
 
-      - name: SQL
-        level: 80%
+    - name: Python & Pytorch
+      level: 85%
 
-      - name: C#, .Net, Java
-        level: 80%
+    - name: Pandas & Seaborn
+      level: 85%
+
+    - name: SQL
+      level: 80%
+
+    - name: C#, .Net, Java
+      level: 80%
 
 footer: >
