--- a/_data/data.yml
+++ b/_data/data.yml
@@ -12,31 +12,31 @@ sidebar:
   tagline: AI Engineer
   avatar: profile.png #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
-    # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    citizenship:
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
-    telegram: # add your nickname without '@' sign
-    gitlab:
-    bitbucket:
-    twitter: '@webjeda'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
-    codewars:
-    goodreads: # Number-Username, e.g. 123456-alandoe
-    pdf: http://www.africau.edu/images/default/sample.pdf
+  # Sidebar links
+  email: hello@webjeda.com
+  phone: 012 345 6789
+  citizenship:
+  website: blog.webjeda.com #do not add http://
+  linkedin: alandoe
+  xing: alandoe
+  github: sharu725
+  telegram: # add your nickname without '@' sign
+  gitlab:
+  bitbucket:
+  twitter: "@webjeda"
+  stack-overflow: # Number/Username, e.g. 123456/alandoe
+  codewars:
+  goodreads: # Number-Username, e.g. 123456-alandoe
+  pdf: http://www.africau.edu/images/default/sample.pdf
 
   languages:
-      title: Languages
-      info:
-        - idiom: English
-          level: Intermediate
+    title: Languages
+    info:
+      - idiom: English
+        level: Intermediate
 
-        - idiom: Vietnamese
-          level: Native
+      - idiom: Vietnamese
+        level: Native
 
   interests:
     title: Interests
