--- a/_data/data.yml
+++ b/_data/data.yml
@@ -4,7 +4,7 @@
 
 sidebar:
   position: right # position of the sidebar : left or right
-  about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
+  about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
   education: True # set to False if you want education in main section instead of in sidebar
 
   # Profile information
@@ -13,21 +13,21 @@ sidebar:
   avatar: profile.png #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
   # Sidebar links
-  email: hello@webjeda.com
-  phone: 012 345 6789
+  email: hungpham@vtc.vn
+  phone: 0971169255
   citizenship:
-  website: blog.webjeda.com #do not add http://
-  linkedin: alandoe
-  xing: alandoe
-  github: sharu725
+  # website: blog.webjeda.com #do not add http://
+  linkedin: hungpham13
+  # xing: alandoe
+  github: hungpham13
   telegram: # add your nickname without '@' sign
   gitlab:
   bitbucket:
-  twitter: "@webjeda"
+  # twitter: "@webjeda"
   stack-overflow: # Number/Username, e.g. 123456/alandoe
-  codewars:
+  codewars: hungpham13
   goodreads: # Number-Username, e.g. 123456-alandoe
-  pdf: http://www.africau.edu/images/default/sample.pdf
+  # pdf: http://www.africau.edu/images/default/sample.pdf
 
   languages:
     title: Languages
@@ -54,7 +54,7 @@ career-profile:
   title: Current Interest
   summary: |
     Researching and developing Vietnamese Large Language Model.
-      -
+      # -
 education:
   - degree: BSc in DataScience & AI
     university: Hanoi University of Science and Technology
@@ -64,30 +64,74 @@ education:
       I learned about machine learning, deep learning, data mining, data visualization, and software engineering. I also have experience in working with real-world data and solving real-world problems.
 
 experiences:
-  - role: Frontend Developer & Designer
-    link: http://125.212.238.157:3001/
-    time: 2021 - 2022
-    company: Osemnai
-    details: |
-      Develop OCR web application using Typescript, React, Jotai, React-query. 
-      The application allows user to sign up, login, create recognition process, upload images, extract and edit information from input image.
+  title: Experiences
+  info:
+    - role: Frontend Developer & Designer
+      link: http://125.212.238.157:3001/
+      time: 2021 - 2022
+      company: Osemnai
+      details: |
+        Develop OCR web application using Typescript, React, Jotai, React-query. 
+        The application allows user to sign up, login, create recognition process, upload images, extract and edit information from input image.
 
-  - role: Backend Intern
-    time: 2022 - 2023
-    link: https://github.com/hungpham13/TestDotnetAPI
-    company: VTC
-    details: |
-      Develop Restful API for VStream - an application for entertainment company to make event. 
-      The systems allows login, sign up, user management, event management, attendance management for each event, attendance validation by generating QR Code. 
-      Using .Net C# with SQL Server
+    - role: Backend Intern
+      time: 2022 - 2023
+      link: https://github.com/hungpham13/TestDotnetAPI
+      company: VTC
+      details: |
+        Develop Restful API for VStream - an application for entertainment company to make event. 
+        The systems allows login, sign up, user management, event management, attendance management for each event, attendance validation by generating QR Code. 
+        Using .Net C# with SQL Server
 
-  - role: Intern Researcher
-    time: 2021 - Present
-    company: Intelligent Software Engineering Lab - BKAI
-    details: |
-      Develop algorithms to solve the problem of data discretization in Big Data. 
-      The algorithm is applied to calculate the PSI of customer credit score distributions by days. 
-      If the PSI for 2 consecutive days is high, bank manager can detect the abnormal event that make a large shift for population distribution.
+    - role: Intern Researcher
+      time: 2021 - Present
+      company: Intelligent Software Engineering Lab - BKAI
+      details: |
+        Develop algorithms to solve the problem of data discretization in Big Data. 
+        The algorithm is applied to calculate the PSI of customer credit score distributions by days. 
+        If the PSI for 2 consecutive days is high, bank manager can detect the abnormal event that make a large shift for population distribution.
+
+# certifications:
+#       title: Certifications
+#       list:
+#         - name: CV Builder
+#           start: 2020
+#           end: 2021
+#           organization: Microsoft
+#           credentialid: 111-222
+#           credentialurl: www.google.com
+#           credentialname: Google
+#           details: |
+#             Details about cert. Lorem ipsum dolor sit amet, consectetur
+#             adipiscing elit.
+#             Nullam eget orci purus. Nullam ultrices neque nibh.
+#             Aenean fermentum, felis vulputate suscipit accumsan,
+#             sem enim bibendum augue, sed convallis arcu lacus at dui.
+#             Pellentesque et nibh suscipit, vestibulum turpis eu, semper tortor.
+#             Praesent felis nibh, eleifend id eleifend id, dictum id enim.
+#             Praesent venenatis erat non augue suscipit consectetur.
+
+#             Second paragraph. Sed eleifend enim ante, vitae efficitur purus
+#             fringilla vel. Ut euismod, sem sed vulputate venenatis,
+#             justo diam viverra velit, sed rhoncus leo leo eu justo.
+#             Suspendisse placerat risus ante, sed porta nisi blandit at.
+#         - name: Git learning
+#           start: 2019
+#           end:
+#           organization: Microsoft
+#           credentialid: 111-222
+#           credentialurl: www.github.com
+#           credentialname: Github
+#           details: |
+#             Older certification. Lorem ipsum dolor sit amet, consectetur
+#             adipiscing elit.
+#             Nullam eget orci purus. Nullam ultrices neque nibh.
+#             Aenean fermentum, felis vulputate suscipit accumsan,
+#             sem enim bibendum augue, sed convallis arcu lacus at dui.
+#             Pellentesque et nibh suscipit, vestibulum turpis eu, semper tortor.
+#             Praesent felis nibh, eleifend id eleifend id, dictum id enim.
+#             Praesent venenatis erat non augue suscipit consectetur.
+
 projects:
   title: Projects
   intro: >
